fix some alignment issues

--- a/transifex/static/css/base.css
+++ b/transifex/static/css/base.css
@@ -268,7 +268,7 @@ input.buttonized:focus,
 	text-decoration: none;
 }
 
-.microform input[type="submit"].blist, a.buttonized.blist{
+.microform input[type="submit"].blist, a.buttonized.blist,span.buttonized.blist{
 padding: 4px 10px 3px 27px;
 font-weight: normal;
 font-size: 0.923em;
@@ -501,6 +501,7 @@ li ul, li ol 	{ margin: 0 0 0 0.5em; } /* Sub-list indent */
 .datalist ul li:hover .linkstyle{text-decoration: underline;}
 .datalist ul li.team-row{}
 .datalist ul li.requested-row h5{color:#999;}
+.datalist ul li .buttonized{margin-top: 2px;}
 .datalist ul li.i16{padding-left: 23px;}
 .datalist ul li .name{font-weight: bold;}
 .datalist ul li span.name{color: #666;}
@@ -528,7 +529,7 @@ div.importantmsg {
 .tt-stats{float: left;margin: 8px 10px 0px;}
 .tt-details{float:left;margin-top:7px;width:350px;}
 .tt-details .ttd-extra{line-height: 1.1em; margin-left: 5px;color: #888;}
-.tt-details h5{margin: 0;float:left;font-weight: bold;}
+.tt-details h5,.tt-details a{margin: 0;float:left;font-weight: bold;}
 td img.bullet{position: relative;top:5px;}
 
 /*Actionlist*/
